Serializes correctly; would like to avoid manually specifying fields, though

--- a/srv/pyproject.toml
+++ b/srv/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "python-dotenv",
     "pennant",
     "django",
+    "django_rest_swagger",
     "django_rest_framework"
 ]
 
