--- a/srv/pyproject.toml
+++ b/srv/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "python-dotenv",
     "pennant",
     "django",
+    "django-pgtrigger",
     "django_rest_swagger",
     "django_rest_framework"
 ]
