First use of Swagger UI; how can we customize?

--- a/srv/pyproject.toml
+++ b/srv/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "python-dotenv",
     "pennant",
     "django",
-    "django_rest_swagger",
+    "drf-yasg",
     "django_rest_framework"
 ]
 
