Updating inventory to apply the use method correctly

--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -18,7 +18,7 @@ description = "Client-sided API interaction installed to Codespaces container."
 
 [project.scripts]
 inventory = "inventory:main.list"
-#get = "inventory:main.acquire"
 get = "inventory:Acquire.cmd"
+use = "inventory:Use.cmd"
 drop = "inventory:main.drop"
 climate = "climate:main.main"
