--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -20,5 +20,5 @@ description = "Client-sided API interaction installed to Codespaces container."
 inventory = "inventory:main.list"
 get = "inventory:Acquire.cmd"
 use = "inventory:Use.cmd"
-drop = "inventory:main.drop"
+drop = "inventory:Drop.cmd"
 climate = "climate:main.main"
