Putting Give and Info work on VCS

--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 dependencies = [
     "arglite",
     "pennant",
+    "openai",
     "python-dotenv",
     "requests",
     "rich"
@@ -20,6 +21,7 @@ description = "Client-sided API interaction installed to Codespaces container."
 presence = "omnipresence:main.report"
 inventory = "inventory:main.list"
 get = "inventory:Acquire.cmd"
-use = "inventory:Use.cmd"
+use = "inventory:Use.cmd_use"
+info = "inventory:Use.cmd_info"
 drop = "inventory:Drop.cmd"
 climate = "climate:main.main"
