--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -18,6 +18,7 @@ readme = "README.md"
 description = "Client-sided API interaction installed to Codespaces container."
 
 [project.scripts]
+who = "omnipresence:Who.cmd"
 presence = "omnipresence:main.report"
 inventory = "inventory:main.list"
 get = "inventory:Acquire.cmd"
