Updating with persona-level progress; need to finish CLI

--- a/srv/pyproject.toml
+++ b/srv/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "psycopg2-binary",
     "python-dotenv",
     "pennant",
+    "openai",
     "django",
     "django-pgtrigger",
     "django_rest_swagger",
