--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -19,6 +19,7 @@ description = "Client-sided API interaction installed to Codespaces container."
 
 [project.scripts]
 who = "omnipresence:Who.cmd"
+talk = "persona:Talk.cmd"
 presence = "omnipresence:main.report"
 inventory = "inventory:main.list"
 get = "inventory:Acquire.cmd"
