Updating API endpoints; including more Ego and gitit. While not persona work, it tracks.

--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "arglite",
     "pennant",
     "pyyaml",
+    "fake-useragent",
     "python-dotenv",
     "requests",
     "rich"
