persona_creator cmd

--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -22,6 +22,7 @@ description = "Client-sided API interaction installed to Codespaces container."
 who = "omnipresence:Who.cmd"
 talk = "persona:Talk.cmd"
 look = "persona:Look.cmd"
+p-create = "persona:Persona_Creator.cmd"
 presence = "omnipresence:main.report"
 inventory = "inventory:main.list"
 get = "inventory:Acquire.cmd"
